--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,9 +5,9 @@
     android:id="@+id/nav_graph">
     <fragment
         android:id="@+id/nav_first"
-        android:name="my.edu.tarc.beyondbarriersmart.CategoryFragment"
+        android:name="my.edu.tarc.beyondbarriersmart.CategoryActivity"
         android:label="@string/category_page_name"
-        tools:layout="@layout/fragment_category" />
+        tools:layout="@layout/activity_category" />
     <fragment
         android:id="@+id/nav_product"
         android:name="my.edu.tarc.beyondbarriersmart.ProductFragment"
