created a bottom nav for seller

--- a/app/src/main/res/layout/activity_spending_chart.xml
+++ b/app/src/main/res/layout/activity_spending_chart.xml
@@ -190,7 +190,7 @@
         android:id="@+id/spending_chart_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/spendingLimitTitle"
