feat: add uploading to database for buyer and seller registration

--- a/app/src/main/res/layout/fragment_buyer_registration.xml
+++ b/app/src/main/res/layout/fragment_buyer_registration.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
@@ -28,8 +28,8 @@
                 android:background="@drawable/custom_input"
                 android:drawableEnd="@drawable/ic_calendar"
                 android:ems="10"
-                android:hint="@string/birth_date_sample"
                 android:focusable="false"
+                android:hint="@string/birth_date_sample"
                 android:inputType="date"
                 android:minWidth="48dp"
                 android:minHeight="48dp"
@@ -48,14 +48,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/custom_input"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
                 android:ems="10"
                 android:hint="@string/prompt_password"
                 android:inputType="textPassword"
                 android:minWidth="48dp"
                 android:minHeight="48dp"
                 android:paddingStart="5dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -67,8 +67,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/username"
-                app:layout_constraintStart_toStartOf="@+id/buyer_username_input"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintBottom_toTopOf="@+id/buyer_username_input"
+                app:layout_constraintStart_toStartOf="@+id/buyer_username_input" />
 
             <TextView
                 android:id="@+id/textView11"
@@ -92,14 +92,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/custom_input"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
                 android:ems="10"
                 android:hint="@string/email_sample"
                 android:inputType="textPersonName"
                 android:minWidth="48dp"
                 android:minHeight="48dp"
                 android:paddingStart="5dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -118,19 +118,20 @@
                 android:id="@+id/buyer_username_input"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
                 android:background="@drawable/custom_input"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
                 android:ems="10"
                 android:hint="@string/accountName"
                 android:inputType="textPersonName"
                 android:minWidth="48dp"
                 android:minHeight="48dp"
                 android:paddingStart="5dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView6"
+                app:layout_constraintTop_toBottomOf="@+id/buyer_profile_pic_button"
                 app:layout_constraintWidth_percent="0.6" />
 
             <EditText
@@ -139,14 +140,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/custom_input"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
                 android:ems="10"
                 android:hint="@string/retype_password"
                 android:inputType="textPassword"
                 android:minWidth="48dp"
                 android:minHeight="48dp"
                 android:paddingStart="5dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -159,14 +160,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/custom_input"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
                 android:ems="10"
                 android:hint="@string/phone_number_sample"
                 android:inputType="textPersonName"
                 android:minWidth="48dp"
                 android:minHeight="48dp"
                 android:paddingStart="5dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -188,6 +189,88 @@
                 android:text="@string/retype_password"
                 app:layout_constraintBottom_toTopOf="@+id/buyer_password_retype_input"
                 app:layout_constraintStart_toStartOf="@+id/buyer_password_retype_input" />
+
+            <EditText
+                android:id="@+id/buyer_address_input"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/custom_input"
+                android:ems="10"
+                android:hint="@string/address_sample"
+                android:inputType="text"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/buyer_date_of_birth_input"
+                app:layout_constraintWidth_percent="0.6" />
+
+            <TextView
+                android:id="@+id/textView21"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/address"
+                app:layout_constraintBottom_toTopOf="@+id/buyer_address_input"
+                app:layout_constraintStart_toStartOf="@+id/buyer_address_input" />
+
+            <Spinner
+                android:id="@+id/buyer_bank_name_input"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/buyer_address_input"
+                app:layout_constraintWidth_percent="0.6" />
+
+            <TextView
+                android:id="@+id/textView27"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/bank_name"
+                app:layout_constraintBottom_toTopOf="@+id/buyer_bank_name_input"
+                app:layout_constraintStart_toStartOf="@+id/buyer_bank_name_input" />
+
+            <EditText
+                android:id="@+id/buyer_card_no_input"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/custom_input"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                android:ems="10"
+                android:hint="@string/credit_card_number_sample"
+                android:inputType="number"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/buyer_bank_name_input"
+                app:layout_constraintWidth_percent="0.6" />
+
+            <TextView
+                android:id="@+id/textView35"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/card_no"
+                app:layout_constraintBottom_toTopOf="@+id/buyer_card_no_input"
+                app:layout_constraintStart_toStartOf="@+id/buyer_card_no_input" />
+
+            <ImageButton
+                android:id="@+id/buyer_profile_pic_button"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@drawable/profile_person_icon" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
