--- a/app/src/main/res/layout/fragment_buyer_profile.xml
+++ b/app/src/main/res/layout/fragment_buyer_profile.xml
@@ -92,6 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:layout_marginEnd="30dp"
                 android:text="@string/edit_profile"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/user_profile_section" />
