--- a/app/src/main/res/layout/fragment_buyer_profile.xml
+++ b/app/src/main/res/layout/fragment_buyer_profile.xml
@@ -124,7 +124,7 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="@drawable/profile_section_bg"
-                    app:layout_constraintBottom_toTopOf="@+id/add_payment_method_clickable_text"
+                    app:layout_constraintBottom_toTopOf="@+id/edit_payment_method_clickable_text"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHeight_percent="0.4"
                     app:layout_constraintStart_toStartOf="parent"
@@ -166,7 +166,7 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
-                    android:id="@+id/add_payment_method_clickable_text"
+                    android:id="@+id/edit_payment_method_clickable_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
@@ -176,6 +176,7 @@
                     android:minWidth="48dp"
                     android:minHeight="48dp"
                     android:text="@string/edit_payment_method"
+                    android:textAppearance="@style/clickable_text"
                     android:textAlignment="center"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
@@ -197,29 +198,33 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="@string/saved_addresses"
+                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout6"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/textView24"
+                    android:id="@+id/edit_address_clickable_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
                     android:layout_marginEnd="15dp"
-                    android:layout_marginBottom="10dp"
                     android:text="@string/edit_address"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    android:textAppearance="@style/clickable_text"
+                    android:textSize="14sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout6" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraintLayout6"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:background="@drawable/profile_section_bg"
-                    app:layout_constraintBottom_toTopOf="@+id/textView24"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHeight_percent="0.4"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView25"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintWidth_percent="0.85">
 
                     <ImageView
