--- a/app/src/main/res/layout/fragment_buyer_profile.xml
+++ b/app/src/main/res/layout/fragment_buyer_profile.xml
@@ -48,7 +48,7 @@
                     android:id="@+id/imageView5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="32dp"
+                    android:layout_marginEnd="10dp"
                     android:scaleType="center"
                     android:scaleX="3"
                     android:scaleY="3"
@@ -58,29 +58,20 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/username_profile"
+                    android:id="@+id/buyer_profile_username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:text="@string/username_sample"
-                    app:layout_constraintBottom_toTopOf="@+id/last_purchase_text"
+                    app:layout_constraintBottom_toTopOf="@+id/buyer_profile_email"
                     app:layout_constraintStart_toEndOf="@+id/divider9" />
 
                 <TextView
-                    android:id="@+id/last_purchase_time_text"
+                    android:id="@+id/buyer_profile_email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:text="@string/last_purchase_time_sample"
-                    app:layout_constraintStart_toEndOf="@+id/divider9"
-                    app:layout_constraintTop_toBottomOf="@+id/last_purchase_text" />
-
-                <TextView
-                    android:id="@+id/last_purchase_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:text="@string/last_purchase"
+                    android:text="@string/email_sample"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/divider9"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -144,7 +135,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/textView22"
+                        android:id="@+id/buyer_profile_bank_name_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="24dp"
@@ -154,13 +145,13 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/textView23"
+                        android:id="@+id/buyer_profile_card_number"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:text="@string/credit_card_number_sample"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/textView22"
+                        app:layout_constraintStart_toEndOf="@+id/buyer_profile_bank_name_text"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.492" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -240,7 +231,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/textView26"
+                        android:id="@+id/buyer_profile_address"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="24dp"
